--- a/src/app/shared/components/lazyImage/lazyImage.component.html
+++ b/src/app/shared/components/lazyImage/lazyImage.component.html
@@ -9,7 +9,7 @@
     />
   <img
   *ngIf="!hasLoaded"
-    src="./src/app/assets/loader.svg"
+    src="/src/app/assets/loader.svg"
     height="35"
     width="35"
     class="mt-3"
